--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
+    <string name="pref_title_recommendations">Enable notification</string>
+    <string name="pref_description_notification">Enables or disable notification when expenses
+        exceed your revenues
     </string>
 
     <string name="pref_title_display_name">Edit notification message</string>
