--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,10 @@
         <item>0</item>
         <item>-1</item>
     </string-array>
-
+    <string-array name="statuses">
+        <item>Active</item>
+        <item>Archive</item>
+    </string-array>
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
