portfolio page prototype

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,8 @@
     </string-array>
     <string-array name="statuses">
         <item>Active</item>
-        <item>Archive</item>
+        <item>Archived</item>
+        <item>Proposal</item>
     </string-array>
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
